--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,22 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Sản xuất thi công nội thất hàng đầu Hà Nội"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
 		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
 		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
@@ -48,31 +61,12 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-
+		<link rel="manifest" href="/manifest.json" />
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-			rel="stylesheet"
-		/>
-
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-		/>
-
-		<title>Rubik Interior | We design your home</title>
-		<script
-			src="https://kit.fontawesome.com/69d97d75ac.js"
-			crossorigin="anonymous"
-		></script>
+		<title>Rubik Interior | Công ty sản xuất, thi công nội thất hàng đầu</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
